# mcu8051ide-1.4.9-mt

./: .gitignore  CMakeLists.txt  ChangeLog  README  README.md  TODO  application-x-mcu8051ide.xml  mcu8051ide.appdata.xml  mcu8051ide.desktop
data/: license.txt  m5ihib.dtd  mcus.xml  project.dtd  tips.xml
demo/: Demo project.mcu8051ide  LCD.adf  LCD.asm  LCD.hex  LCD.lst  LCD.vhc  demo.wtc  demo0.adf  demo0.asm  demo0.hex  demo0.lst  demo1.adf  demo1.asm  demo1.hex  demo1.lst  demo2.adf  demo2.asm  demo2.hex  demo2.lst  demo3.adf  demo3.asm  demo4.adf  demo4.asm  demo4.hex  demo4.lst  demo5.adf  demo5.asm  demo5.lst  demo_c_0.c  demo_c_0.cdb  demo_c_0.hashes  demo_c_0.ihx  demo_c_0.lst  file.hex  file.lst  keypad_display.c  keypad_display.cdb  keypad_display.hashes  keypad_display.ihx  keypad_display.lst  (+12 more)
doc/handbook/: mcu8051ide.en.tex
hwplugins/: README  plug-in_template.txt
lib/: X.tcl  cli.tcl  custom_command.tcl  environment.tcl  external_command.tcl  list_of_files.txt  main.tcl  maintab.tcl  project.tcl  receive_and_print.tcl
lib/bottompanel/: bottomnotebook.tcl  calculator.tcl  cvarsview.tcl  find_in_files.tcl  graph.tcl  graph_wdg.tcl  messages.tcl  terminal.tcl  todo.tcl
lib/compiler/: assembler.tcl  codelisting.tcl  compiler.tcl  compilerconsts.tcl  disassembler.tcl  external_compiler.tcl  preprocessor.tcl
lib/configdialogues/: compiler_config.tcl  configdialogues.tcl  custom_commands_config.tcl  editor_config.tcl  global_config.tcl  rightpanel_config.tcl  shortcuts_config.tcl  simulator_config.tcl  terminal_config.tcl  toolbar_config.tcl
lib/dialogues/: errorhandler.tcl  fsd.tcl  my_tk_messageBox.tcl  selectmcu.tcl  tips.tcl
lib/editor/: ASMsyntaxhighlight.tcl  Csyntaxhighlight.tcl  LSTsyntaxhighlight.tcl  R_ASMsyntaxhighlight.tcl  autocompletion.tcl  commandline.tcl  editor.tcl  eventhandlers.tcl  exports.tcl  generalproc.tcl  spell_check.tcl
lib/leftpanel/: filelist.tcl  fsbrowser.tcl  sfrwatches.tcl
lib/lib/: FSnotifications.tcl  Math.tcl  hexeditor.tcl  ihextools.tcl  innerwindow.tcl  modern_notebook.tcl  settings.tcl
lib/pale/: ds1620.tcl  file_interface.tcl  hd44780_cgrom.tcl  lcd_hd44780.tcl  leddisplay.tcl  ledmatrix.tcl  ledpanel.tcl  matrixkeypad.tcl  multiplexedleddisplay.tcl  pale.tcl  simplekeypad.tcl  virtual_hw_component.tcl  virtual_uart_term.tcl
lib/rightpanel/: hwmanager.tcl  instructiondetails.tcl  regwatches.tcl  rightpanel.tcl  subprograms.tcl
lib/simulator/: bitmap.tcl  hibernate.tcl  interruptmonitor.tcl  sfrmap.tcl  simulator.tcl  simulator_gui.tcl  (+3 more)
pkgs/: README  create_installation_packages.sh
regression_tests/: README  rte.lib.sh
translations/: README  languages.txt  template.txt  tool.tcl  zh_CN.msg
(+47 files in other folders)
